Updated homepage infographic to fix image stretching

--- a/angular/app/styles/_infographic.scss
+++ b/angular/app/styles/_infographic.scss
@@ -110,8 +110,8 @@
 
     @include breakpoint(lg) {
       font-size: 27px;
-      width: 28%;
-      margin: 39px 2% 0 3%;
+      width: 27%;
+      margin: 39px 2% 0 4%;
     }
   }
 }
